# UAV-project

./: .gitignore  .gitmodules  data.py  parameters.yaml  plot_results.py  requirements.txt  setup.sh  simulation.py  test.py  workbook.mw
allocator/: config.py  data_generation.py  data_preparation.py  function_fitting.py  test_model.py
autogen/.cache/clangd/index/: body_mdl.cpp.E373A014083FB4FE.idx  body_mdl.hpp.B2A497B1FC3AA2BD.idx  body_mdl_params.hpp.421D554A2AE52A99.idx  body_mdl_wrapper.cpp.B46E88858E114C27.idx  contact_force.cpp.B23FF0B0CEBBD3AB.idx  contact_force.hpp.E7F5D581F69231FD.idx  contact_force_dt1.cpp.AAA5AD6DBADF573B.idx  contact_force_dt1.hpp.ADAF2F2B26B46BED.idx  contact_force_dt1_params.hpp.0D08B73D515AD102.idx  contact_force_dt1_wrapper.cpp.F7A8AD190F8DCB90.idx  contact_force_dt2.cpp.4AA25546CD78403A.idx  contact_force_dt2.hpp.AFB46DC660CFBBD7.idx  contact_force_dt2_params.hpp.D0F2BD0D510E5806.idx  contact_force_dt2_wrapper.cpp.66BD93F02E250B7C.idx  contact_force_dt3.cpp.ED531C67FEF27AB1.idx  contact_force_dt3.hpp.513069BCD700B70A.idx  contact_force_dt3_params.hpp.66B199FD1515FBFF.idx  contact_force_dt3_wrapper.cpp.F0FE33B31E7E6D1A.idx  contact_force_dt4.cpp.B5097E88A1B50C56.idx  contact_force_dt4.hpp.D0F399FABC85DC70.idx  contact_force_dt4_params.hpp.297B9F7507944D46.idx  contact_force_dt4_wrapper.cpp.5FC256D55425750F.idx  contact_force_params.hpp.0D28B80B8A41D7AC.idx  contact_force_wrapper.cpp.8F87F1D81CE1B138.idx  force_contact1.cpp.4DB06F44222C4887.idx  force_contact1.hpp.6D64BFCB05322976.idx  force_contact1_params.hpp.CE31A28B27F78A13.idx  force_contact1_wrapper.cpp.31DDEDEBA56F1758.idx  force_contact2.cpp.363D08784368A86E.idx  force_contact2.hpp.8CE57B20E31DA89F.idx  force_contact2_params.hpp.BDF52A7199F14FEE.idx  force_contact2_wrapper.cpp.6AEB7557D607B4DC.idx  force_contact3.cpp.9F9F87402161FA1E.idx  force_contact3.hpp.B2817E79719624B8.idx  force_contact3_params.hpp.FEA5EA8691E3468E.idx  force_contact3_wrapper.cpp.054534506A504312.idx  force_contact4.cpp.CA8A98C036979AD5.idx  force_contact4.hpp.68ED9BB595665CDF.idx  force_contact4_params.hpp.5F4D7359F852D20A.idx  force_contact4_wrapper.cpp.EBC48984A3E5E9A1.idx  (+81 more)
autogen/include/maple_codegen/: body_mdl.hpp  body_mdl_params.hpp  contact_force.hpp  contact_force_dt1.hpp  contact_force_dt1_params.hpp  contact_force_dt2.hpp  contact_force_dt2_params.hpp  contact_force_dt3.hpp  contact_force_dt3_params.hpp  contact_force_dt4.hpp  contact_force_dt4_params.hpp  contact_force_params.hpp  force_contact1.hpp  force_contact1_params.hpp  force_contact2.hpp  force_contact2_params.hpp  force_contact3.hpp  force_contact3_params.hpp  force_contact4.hpp  force_contact4_params.hpp  motor_current.hpp  motor_current_params.hpp  motor_force_lb.hpp  motor_force_lb_params.hpp  motor_force_mdl.hpp  motor_force_mdl_params.hpp  motor_force_ub.hpp  motor_force_ub_params.hpp  motor_sys_lb_u.hpp  motor_sys_lb_u_params.hpp  motor_sys_lb_x.hpp  motor_sys_lb_x_params.hpp  motor_sys_mdl.hpp  motor_sys_mdl_params.hpp  motor_sys_ub_u.hpp  motor_sys_ub_u_params.hpp  motor_sys_ub_x.hpp  motor_sys_ub_x_params.hpp  overall_force.hpp  overall_force_params.hpp  (+20 more)
autogen/pythonwraps/: CMakeLists.txt  body_mdl_wrapper.cpp  contact_force_dt1_wrapper.cpp  contact_force_dt2_wrapper.cpp  contact_force_dt3_wrapper.cpp  contact_force_dt4_wrapper.cpp  contact_force_wrapper.cpp  force_contact1_wrapper.cpp  force_contact2_wrapper.cpp  force_contact3_wrapper.cpp  force_contact4_wrapper.cpp  motor_current_wrapper.cpp  motor_force_lb_wrapper.cpp  motor_force_mdl_wrapper.cpp  motor_force_ub_wrapper.cpp  motor_sys_lb_u_wrapper.cpp  motor_sys_lb_x_wrapper.cpp  motor_sys_mdl_wrapper.cpp  motor_sys_ub_u_wrapper.cpp  motor_sys_ub_x_wrapper.cpp  overall_force_wrapper.cpp  rospo_com_cost_func_wrapper.cpp  rospo_com_force_in_lb_wrapper.cpp  rospo_com_force_in_ub_wrapper.cpp  rospo_com_force_lb_wrapper.cpp  rospo_com_force_max_wrapper.cpp  rospo_com_force_ub_wrapper.cpp  rospo_com_force_wrapper.cpp  system_model_wrapper.cpp  turret_force_wrapper.cpp  turret_mdl_wrapper.cpp
autogen/src/: body_mdl.cpp  contact_force.cpp  contact_force_dt1.cpp  contact_force_dt2.cpp  contact_force_dt3.cpp  contact_force_dt4.cpp  force_contact1.cpp  force_contact2.cpp  force_contact3.cpp  force_contact4.cpp  motor_current.cpp  motor_force_lb.cpp  motor_force_mdl.cpp  motor_force_ub.cpp  motor_sys_lb_u.cpp  motor_sys_lb_x.cpp  motor_sys_mdl.cpp  motor_sys_ub_u.cpp  motor_sys_ub_x.cpp  overall_force.cpp  rospo_com_cost_func.cpp  rospo_com_force.cpp  rospo_com_force_in_lb.cpp  rospo_com_force_in_ub.cpp  rospo_com_force_lb.cpp  rospo_com_force_max.cpp  rospo_com_force_ub.cpp  system_model.cpp  turret_force.cpp  turret_mdl.cpp
data_generator/: CMakeLists.txt  build.sh  cost_function.py  install_requirements.sh  load_data.py  main.cpp  main_data_generator.py  setup.py
data_generator/example/: CMakeLists.txt  roboptim_test.cpp
data_generator/example/include/: constraints.hpp  defines.hpp  objective.hpp
data_generator/example/src/: CMakeLists.txt  constraints.hpp  objective.cpp
data_generator/include/rospo/: defines.hpp  parameters.hpp  params.hpp  turret.hpp
data_generator/src/: CMakeLists.txt  turret.cpp
data_generator2/: body.py  multibody.py  parameters.py  system.py  turret.py
models/: __init__.py  body.py  turret.py
motor_model/: config.py  data_generation.py  data_preparation.py  function_fitting.py  test_model.py
neuralnetworks/: __init__.py  fullyconnected.py  loader.py
presentation/: Makefile  config.yaml  defs.tex  presentation.rst
report/: IEEEtran.cls  bibliography.bib  report.tex
report/Images/: delta.eps  error.eps  force-1.eps  force-2.eps  force-3.eps  motorNN.eps  path.eps
report/Sections/: code.tex  conclusions.tex  control.tex  description.tex  introduction.tex  results.tex
report/Tables/: motorcoeffs.tex  simdata.tex
simulator/: HLController.py  functions.py  setup.py  simutils.py  visualisation.py
utils/: __init__.py  _transformation_matrices.py  ode_integration.py  wrappers.py
